@@ -12,8 +12,12 @@
 /*                                                                        */
 /**************************************************************************/
 
+#define CAML_INTERNALS
+
 #include "caml/fail.h"
 #include "caml/mlvalues.h"
+#include "caml/io.h"
+#include "caml/spacetime.h"
 
 int caml_ensure_spacetime_dot_o_is_included = 42;
 
@@ -22,7 +26,8 @@ CAMLprim value caml_spacetime_only_works_for_native_code(value foo, ...)
   caml_failwith("Spacetime profiling only works for native code");
 }
 
-uintnat caml_spacetime_my_profinfo (void)
+uintnat caml_spacetime_my_profinfo (spacetime_unwind_info_cache * cached,
+                                    uintnat wosize)
 {
   return 0;
 }
